test/cases/compile_errors/access_non-existent_member_of_error_set.zig
const Foo = error{A};
comptime {
    const z = Foo.Bar;
    _ = z;
}

// error
// backend=stage2
// target=native
//
// :3:18: error: no error named 'Bar' in 'error{A}'
